# CPP-MINI-MAX

./: .gitignore  README.md  pyproject.toml  run.sh
build_logs/: build_log.txt  error_log.txt
cpp_src/AI/: agent.cpp  heuristic.cpp  search.cpp  state.cpp  transposition.cpp
includes/: heuristic.h  search.h  state.h  transposition.h
python_src/: agent.py  board.py  game.py  gameplayer.py  heuristic.py  search.py
test_c_modules/: pyproject.toml  test.cpp  test_extension.py
