[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "AI"
version = "0.1"

[tool.setuptools]
ext-modules = [ { name = "AI.Heuristic", sources = ["cpp_src/AI/heuristic.cpp"], include-dirs = ["includes"], language = "c++" }]

[tool.setuptools.packages.find]
where = ["cpp_src"]
